// ======================================
// vgAI Database Schema
// ======================================

Enum scene_density {
  small
  medium
  high
}

Enum generation_status {
  pending
  generating
  completed
  failed
}

Enum payment_status {
  pending
  success
  failed
  refunded
}

Enum content_type {
  long_videos
  short_videos
}

// vgai2admin-owned enums -- written/read from the separate admin portal
// (C:\Users\ASUS\OneDrive\Desktop\vgai2admin), same shared database. See that
// repo's README.md §4/§9 for the design behind each.

Enum access_list_type {
  allowed
  restricted
}

Enum access_system_mode {
  allowed_all
  allowed_only
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]

  name varchar(200)
  email varchar(255) [not null, unique]
  profile_image_url text

  // Credits
  current_credit_balance numeric [not null, default: 0]
  miscellaneous_credit_spent numeric [not null, default: 0]
 

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table project_expence_tracker {
  id uuid [pk, default: `gen_random_uuid()`]

  user_id uuid [not null]

  // Store project ID only for reference.
  // No foreign key so history remains even after project deletion.
  project_id uuid [not null]
  project_name varchar(200) [not null]

  llm_credit_spent numeric [not null, default: 0]
  image_credit_spent numeric [not null, default: 0]
  animation_credit_spent numeric [not null, default: 0]
  voiceover_credit_spent numeric [not null, default: 0]

  // Per-project counterpart to users.miscellaneous_credit_spent -- added for
  // vgai2admin's per-project view so it can break spend down the same five
  // ways /profile does. The two must stay disjoint (a spend books into
  // exactly one, never both) or totals double-count. Nothing currently books
  // into this column -- it reads 0 for every project until a project-scoped
  // spend (e.g. imageregeneration.py's prompt-rewrite fee) is moved into it.
  miscellaneous_credit_spent numeric [not null, default: 0]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table projects {
  id uuid [pk, default: `gen_random_uuid()`]

  user_id uuid [not null]

  name varchar(200) [not null]
  script text

  is_liked boolean [not null, default: false]
  // Keeps an inactive/completed project out of the normal sidebar list.
  // It remains fully available and can be restored from Hidden Projects.
  is_hidden boolean [not null, default: false]



  // AI Models
  llm_model_id varchar(200)
  image_model_id varchar(200)
  animation_model_id varchar(200)

  // Snapshot of selected Style Template
  snapshot_styletemplate_name varchar(200)
  snapshot_styletemplate_image_prompt text
  snapshot_styletemplate_animation_prompt text
  snapshot_styletemplate_youtube_title_description_tags_prompt text
  snapshot_styletemplate_youtube_thumbnail_image_prompt text
  snapshot_styletemplate_description text
  snapshot_styletemplate_image_aspect_ratio text
  snapshot_styletemplate_video_aspect_ratio text
  snapshot_styletemplate_scene_density scene_density

  // YouTube Metadata
  thumbnail_prompt text
  thumbnail_image_url text

  // See scenes.image_generation_token.
  thumbnail_generation_token uuid

  title_of_video text
  description_of_video text
  tags_of_video text

  // Voice Settings
  vo_voice_id text [default: '95etAma035P6Ys5iv7Oo']
  vo_model_id text [default: 'eleven_multilingual_v2']
  vo_stability numeric [default: 40]
  vo_similarity numeric [default: 70]
  vo_style numeric [default: 30]
  vo_speaker_boost boolean [default: true]
  vo_speed numeric [default: 0.88]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table style_templates {
  id uuid [pk, default: `gen_random_uuid()`]

  user_id uuid [not null]

  name varchar(200) [not null]
  is_default boolean [not null, default: false]

  image_prompt text [not null]
  animation_prompt text [not null]
  youtube_title_description_tags_prompt text
  youtube_thumbnail_image_prompt text
  
  // small = 1-10 words
  // medium = 10-15 words
  // high = 15-25 words
  scene_density scene_density [not null, default: 'small']
  image_aspect_ratio text [not null]
  video_aspect_ratio text [not null]
  description text [not null]

  // Both optional, set from the form's Advanced Settings section.
  // best_for = content niches this style suits, e.g. 'History, biography,
  // philosophy'. User-facing only — the scene-splitting brief is in description.
  // demo_image_url = Cloudinary sample frame previewed on the template card.
  best_for text
  demo_image_url text
  // Ordered catalog gallery (up to three); first is copied on import.
  demo_image_urls jsonb [not null, default: `[]`]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    // Note: Partial index enforced in DDL: WHERE is_default = true
    (user_id, is_default) [name: 'idx_user_default_style']
  }
}

Table characters {
  id uuid [pk, default: `gen_random_uuid()`]

  user_id uuid [not null]
  is_default boolean [not null, default: false]

  name varchar(200) [not null]
  description text [not null]
  character_sheet_url text [not null]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table script_templates {
  id uuid [pk, default: `gen_random_uuid()`]

  user_id uuid [not null]

  category varchar(200) [not null]
  topic_description text [not null]
  script_description text [not null]
  content_type content_type [not null, default: 'long_videos']
  target_country varchar(200) [not null]
  script_word_length varchar(20) [not null]

  // false = auto-created behind a "Get Top 10 Viral Topics" / generate call the
  // user never explicitly saved; true = user clicked "Save as Template". The
  // "My Templates" list only shows is_saved = true rows.
  is_saved boolean [not null, default: false]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table researched_topics {
  id uuid [pk, default: `gen_random_uuid()`]

  script_template_id uuid [not null]
  user_id uuid [not null]

  // 1-10, one slot per topic in a "Get Top 10 Viral Topics" batch. Re-researching
  // the same script_template updates these 10 rows in place rather than creating
  // new ones, so a template always has at most 10 researched_topics rows.
  topic_number int [not null]

  topic_name varchar(300) [not null]
  brief_description text [not null]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (script_template_id, topic_number) [unique]
  }
}

Table generated_scripts {
  id uuid [pk, default: `gen_random_uuid()`]

  script_template_id uuid [not null]
  user_id uuid [not null]

  // Denormalized, not a FK to researched_topics -- a script must survive even
  // after its originating topic batch gets replaced by a later research call.
  topic_name text [not null]
  script_text text [not null]

  // Characters involved, serialized as delimited text (characters joined by
  // "|||", each character's fields joined by "::") and parsed back into
  // structured objects by the backend on read.
  character_involved text

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table project_characters {
  id uuid [pk, default: `gen_random_uuid()`]

  project_id uuid [not null]

  snapshot_name varchar(200) [not null]
  snapshot_description text [not null]
  snapshot_character_sheet_url text [not null]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table scenes {
  id uuid [pk, default: `gen_random_uuid()`]

  project_id uuid [not null]

  scene_number int [not null]
  scene_text text [not null]

  scene_image_prompt text
  scene_animation_prompt text

  generated_image_url text
  generated_animation_url text

  image_status generation_status [not null, default: 'pending']
  animation_status generation_status [not null, default: 'pending']

  // Stamped with a fresh uuid when a generation starts. The write-back at the end
  // is guarded on the token still matching, so a generation the user cancelled --
  // or one superseded by a later click after editing the prompt -- can never land
  // its stale image/animation on top of the newer one.
  image_generation_token uuid
  animation_generation_token uuid

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (project_id, scene_number) [unique]
  }
}

Table scene_characters {
  id uuid [pk, default: `gen_random_uuid()`]

  scene_id uuid [not null]
  project_character_id uuid [not null]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (scene_id, project_character_id) [unique]
  }
}

Table project_voiceovers {
  id uuid [pk, default: `gen_random_uuid()`]

  project_id uuid [not null]

  voiceover_number int [not null]
  voiceover_url text [not null]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (project_id, voiceover_number) [unique]
  }
}

Table credit_topups {
  id uuid [pk, default: `gen_random_uuid()`]

  user_id uuid [not null]

  // Razorpay Details
  razorpay_order_id varchar(255) [not null, unique]
  razorpay_payment_id varchar(255)
  razorpay_signature text

  // Payment
  amount_paid numeric [not null]
  currency varchar(10) [not null, default: 'INR']

  // Credits
  credits_added numeric [not null]

  // User's balance immediately after this top-up
  credits_balance_after numeric [not null]

  payment_status payment_status [not null, default: 'pending']

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// ==========================
// vgai2admin-owned tables
// ==========================
// Written/read from the separate admin portal (vgai2admin), not this repo --
// see that repo's README.md §4/§7/§9 for the design behind each. Kept in this
// file because it's the same shared database vgai2 itself reads.

Table access_control_list {
  id uuid [pk, default: `gen_random_uuid()`]

  // Emails, not user ids -- an address can be listed before that person ever
  // signs up. Stored lowercased/trimmed; enforced by the writer, not the DB.
  email varchar(255) [not null]
  list_type access_list_type [not null]

  // Optional free-text: why this email is on this list.
  note text

  created_at timestamp [not null, default: `now()`]

  indexes {
    (email, list_type) [unique]
    (list_type, email) [name: 'idx_acl_lookup']
  }
}

Table access_system_settings {
  // Singleton -- checked in DDL: id int, default 1, check (id = 1). Read by
  // vgai2's backend on every authenticated request (app/access_control.py),
  // not just at login, since a JWT issued before a restriction stays valid
  // until it expires.
  id int [pk, default: 1]
  mode access_system_mode [not null, default: 'allowed_all']

  updated_at timestamp [not null, default: `now()`]
}

Table user_access_requests {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(320) [not null, unique]
  purpose text
  // DDL check: pending / approved / denied.
  status varchar(20) [not null, default: 'pending']
  requested_at timestamp [not null, default: `now()`]
  reviewed_at timestamp
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (status, requested_at) [name: 'idx_user_access_requests_status']
    requested_at [name: 'idx_user_access_requests_requested']
  }
}

Table admin_credit_grants {
  id uuid [pk, default: `gen_random_uuid()`]

  user_id uuid [not null]

  // Enforced in DDL: check (credits_granted > 0) -- add-only, no subtract
  // path through the admin portal.
  credits_granted numeric [not null]
  credits_balance_after numeric [not null]

  reason text

  // `welcome` is the automatic one-time first-login bonus; `admin` is a
  // support/operator grant. DDL enforces one welcome row per user.
  grant_kind varchar [not null, default: 'admin']

  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, created_at) [name: 'idx_admin_credit_grants_user']
  }
}

Table default_style_templates {
  id uuid [pk, default: `gen_random_uuid()`]

  // Import contract -- POST /styletemplates/defaults/{slug}/import reads
  // every field server-side from this row by slug. Immutable once live.
  slug varchar(200) [not null, unique]
  name varchar(200) [not null]

  image_prompt text [not null]
  animation_prompt text [not null]
  youtube_title_description_tags_prompt text
  youtube_thumbnail_image_prompt text

  scene_density scene_density [not null, default: 'small']
  image_aspect_ratio text [not null]
  video_aspect_ratio text [not null]
  description text [not null]

  best_for text
  demo_image_url text

  // Lets an entry be drafted in vgai2admin before vgai2 users can see/import
  // it -- GET /styletemplates/defaults filters is_published = true.
  is_published boolean [not null, default: true]
  sort_order int [not null, default: 0]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (is_published, sort_order) [name: 'idx_default_style_templates_published']
  }
}

// ==========================
// Relationships
// ==========================

Ref: projects.user_id > users.id
Ref: characters.user_id > users.id
Ref: style_templates.user_id > users.id
Ref: script_templates.user_id > users.id
Ref: credit_topups.user_id > users.id
Ref: project_expence_tracker.user_id > users.id
Ref: admin_credit_grants.user_id > users.id

Ref: researched_topics.script_template_id > script_templates.id
Ref: researched_topics.user_id > users.id
Ref: generated_scripts.script_template_id > script_templates.id
Ref: generated_scripts.user_id > users.id

Ref: project_characters.project_id > projects.id
Ref: scenes.project_id > projects.id
Ref: project_voiceovers.project_id > projects.id

Ref: scene_characters.scene_id > scenes.id
Ref: scene_characters.project_character_id > project_characters.id
